샘플작업중

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cartner",
+  "name": "shinhan_vip",
   "version": "1.0.0",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp": "gulp"
   },
   "author": "",
   "license": "ISC",
